python/test-data/testTypesDict1.err
Traceback (most recent call last):
  File "test-data/testTypesDict1.py", line 7, in <module>
    appendSomething(d)
  File "test-data/testTypesDict1.py", line 4, in appendSomething
    d['x'] = "foo"
WyppTypeError: got value of wrong type

context: appendSomething(d: dict[str, int]) -> None
                            ^^^^^^^^^^^^^^
declared at: test-data/testTypesDict1.py:3
caused by: test-data/testTypesDict1.py:7
  | appendSomething(d)

given:    'foo'
expected: value of type ~V=int

context: __setitem__(self: Self, key: ~K=str, value: ~V=int) -> None
                                                     ^^^^^^
declared at: test-data/testTypesDict1.py:3
caused by: test-data/testTypesDict1.py:4
  |     d['x'] = "foo"
